# CNN_MNIST_SET

./: README.md
CNN_MNIST_CPP/: BackPropResults.h  CMakeCache.txt  CTestTestfile.cmake  ConvolutionLayer.h  FCLayer.h  Functions.h  Image.h  Layer.h  Makefile  MaxPoolingLayer.h  a.out  cmake_install.cmake  cnn_inference  cnn_inference.cpp  cnn_training  cnn_training.cpp  conv_output.csv  fc_output.csv  kernels.csv  load_mnist  load_mnist.cpp  load_mnist_double  load_mnist_double.cpp  main_cpp  main_cpp.cpp  max_pool_output.csv  read_csv  read_csv.cpp  test  test.cpp  test_FClayer  test_FClayer.cpp  test_cnn.cpp  test_convlayer  test_maxpoollayer  test_maxpoollayer.cpp  unit_tests  weights.csv
CNN_MNIST_CU/: CMakeLists.txt  ConvolutionLayer.cu  ConvolutionLayerGranularity.cu  Functions.h  Image.h  MaxPoolingLayer.h  cnn_inference  cnn_inference.batch  cnn_inference.cu  execution_times.csv  plots.py  report1.nsys-rep  test  test.cu  test_convlayer.cpp  test_gran  test_gran.cu
CNN_MNIST_CU/data/: execution_times.csv
CNN_MNIST_CU/inc/: Convolution.h  Functions.h  Layer.h  Results.h  memory_allocation.h
CNN_MNIST_CU/scr/: ConvolutionLayer.cu  ConvolutionLayerGranularity.cu  FCLayer.h  Patch.h  cnn_inference  cnn_inference.cu  cuda_error_check.h
CNN_MNIST_CU/src/: Convolution.cu  ConvolutionLayer.cu  ConvolutionLayerGranularity.cu  Functions.cpp  cnn_inference.cpp  cnn_inference.cu  memory_allocation.cu
CNN_MNIST_CU/tests/: test  test.cpp  test.cu  test_convlayer.cpp
CNN_MNIST_PY/: MyVGG_keras.py  main.py  read_images_keras.py  utils.py
